# dataverse-metadata-crawler

./: .gitignore  CITATION.cff  LICENSE  README.md  _config.yml  cloud_cli.ipynb  example.ipynb  package.json  pyproject.toml  requirements.txt  test-pr.txt
.github/workflows/: commitlint.yml  jekyll-gh-pages.yml  poetry-export_dependencies.yml  test-pr-creation.yml  uv_export_requirements_txt.yml
.husky/: pre-commit
dvmeta/: cli_validation.py  cloud_cli.py  custom_logging.py  dirmanager.py  export_manager.py  func.py  httpxclient.py  log_generation.py  main.py  metadatacrawler.py  models.py  parsing.py  spreadsheet.py  timestamp.py  utils.py
res/: log_template.txt  spreadsheet_order.csv
